feat: Agrega estilos de tema de Angular Material, tema de sweetalert2 y módulo de SweetAlert2, consulta - modificar - registro componentes con estilos de Angular Material. udistrital/sga_documentacion#147

--- a/src/app/modules/lista-proyecto-academico/consulta-proyecto-academico/consulta-proyecto-academico.component.scss
+++ b/src/app/modules/lista-proyecto-academico/consulta-proyecto-academico/consulta-proyecto-academico.component.scss
@@ -39,7 +39,8 @@
 
   .container-buttons{
     display: flex;
-    justify-content: center;    
+    justify-content: center;
+    gap: 1em;  
   }
 
   .container-table{
