--- a/src/app/modules/lista-proyecto-academico/registro-proyecto-academico/registro-proyecto-academico.component.html
+++ b/src/app/modules/lista-proyecto-academico/registro-proyecto-academico/registro-proyecto-academico.component.html
@@ -1,4 +1,5 @@
 <!-- <toaster-container [toasterconfig]="config"></toaster-container> -->
+<h1>Hola mundo</h1>
 <div class="contenedor width">
     <mat-card color="primary">
         <div class="grid">
