feat: Ajustes de environments y limpieza de codigo udistrital/sga_documentacion#195

--- a/src/app/modules/lista-proyecto-academico/list-proyecto-academico.component/list-proyecto-academico.component.component.html
+++ b/src/app/modules/lista-proyecto-academico/list-proyecto-academico.component/list-proyecto-academico.component.component.html
@@ -1,9 +1,4 @@
-<mat-progress-spinner
-  *ngIf="loading"
-  mode="indeterminate"
-  diameter="100"
-></mat-progress-spinner>
-<mat-card *ngIf="!loading">
+<mat-card>
   <mat-card-header>
     <mat-card-title>
       {{ "consultaproyecto.titulo" | translate }}
