feat: Ajustes validadores udistrital/sga_documentacion#201

--- a/src/app/modules/crear-proyecto-academico/crud-proyecto-academico/crud-proyecto-academico.component.html
+++ b/src/app/modules/crear-proyecto-academico/crud-proyecto-academico/crud-proyecto-academico.component.html
@@ -98,13 +98,7 @@
                         name="codigo_interno"
                       />
                       <mat-error
-                        *ngIf="
-                          Campo7Control.hasError('required') ||
-                          Campo7Control.hasError('minlength') ||
-                          Campo7Control.hasError('maxlength') ||
-                          Campo7Control.hasError('pattern')
-                        "
-                      >
+                        *ngIf="Campo7Control.hasError('required')">
                         {{ "proyecto.erro_codigo" | translate }}</mat-error
                       >
                     </mat-form-field>
