feat: Ajustes mensaje y proyecto_padre_id udistrital/sga_documentacion#201

--- a/src/app/modules/crear-proyecto-academico/crud-proyecto-academico/crud-proyecto-academico.component.html
+++ b/src/app/modules/crear-proyecto-academico/crud-proyecto-academico/crud-proyecto-academico.component.html
@@ -341,6 +341,9 @@
           }}</ng-template>
           <mat-card>
             <mat-card-content>
+              {{
+                "proyecto.informar_select" | translate
+              }}
               <mat-form-field class="form-field">
                 <mat-label>{{
                   "proyecto.enfasis_proyecto" | translate
